--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <!-- testmonial -->
         <p>An overall wonderful and rewarding experience</p>
-        <p class="quote">
+        <p class="quote dark">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
         </p>
@@ -127,7 +127,7 @@
         </div>
         <!-- testmonial -->
         <p>Such a life-changing experience. Highly recommended!</p>
-        <p class="quote">
+        <p class="quote dark">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
           programming step by step. I was encouraged to enroll by a former
