added font size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <!-- testmonial -->
-        <p>
+        <p class="large-text">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny’s worth.
@@ -63,7 +63,9 @@
           </div>
         </div>
         <!-- testmonial -->
-        <p>The team was very supportive and kept me motivated</p>
+        <p class="large-text">
+          The team was very supportive and kept me motivated
+        </p>
         <p class="quote">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
@@ -82,7 +84,7 @@
           </div>
         </div>
         <!-- testmonial -->
-        <p>An overall wonderful and rewarding experience</p>
+        <p class="large-text">An overall wonderful and rewarding experience</p>
         <p class="quote dark">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
@@ -100,7 +102,7 @@
           </div>
         </div>
         <!-- testmonial -->
-        <p>
+        <p class="large-text">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
@@ -126,7 +128,9 @@
           </div>
         </div>
         <!-- testmonial -->
-        <p>Such a life-changing experience. Highly recommended!</p>
+        <p class="large-text">
+          Such a life-changing experience. Highly recommended!
+        </p>
         <p class="quote dark">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
